--- a/app.json
+++ b/app.json
@@ -5,7 +5,12 @@
     "version": "1.0.0",
     "assetBundlePatterns": [
       "**/*"
-    ]
+    ],
+    "extra": {
+      "eas": {
+        "projectId": "d089149b-ca3e-407d-b4f1-7551cca70b2b"
+      }
+    }
   },
   "name": "mobile-marketbmxbr"
 }
