--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@react-navigation/native": "^6.1.12",
     "@react-navigation/native-stack": "^6.9.20",
     "axios": "^1.6.7",
-    "expo": "~50.0.7",
+    "expo": "^50.0.8",
     "expo-status-bar": "~1.11.1",
     "json-server": "^1.0.0-alpha.23",
     "nativewind": "^2.0.11",
