--- a/package.json
+++ b/package.json
@@ -9,20 +9,21 @@
         "web": "expo start --web"
     },
     "dependencies": {
+        "@react-native-picker/picker": "^2.6.1",
         "@react-navigation/native": "^6.1.12",
         "@react-navigation/native-stack": "^6.9.20",
         "axios": "^1.6.7",
         "expo": "^50.0.8",
+        "expo-constants": "~15.4.5",
+        "expo-linking": "~6.2.2",
+        "expo-router": "~3.4.8",
         "expo-status-bar": "~1.11.1",
         "json-server": "^1.0.0-alpha.23",
         "nativewind": "^2.0.11",
-        "react": "18.2.0",
+        "react": "^18.2.0",
         "react-native": "0.73.4",
         "react-native-safe-area-context": "4.8.2",
-        "react-native-screens": "~3.29.0",
-        "expo-router": "~3.4.8",
-        "expo-linking": "~6.2.2",
-        "expo-constants": "~15.4.5"
+        "react-native-screens": "~3.29.0"
     },
     "devDependencies": {
         "@babel/core": "^7.20.0",
