Pegando os dados da Api e descriptografando dados JWT com Spring

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-native-picker/picker": "^2.6.1",
     "@react-navigation/native": "^6.1.12",
     "@react-navigation/native-stack": "^6.9.20",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/react": "~18.2.45",
     "@types/tailwindcss": "^3.1.0",
     "axios": "^1.6.7",
@@ -20,6 +21,7 @@
     "expo-image-picker": "~14.7.1",
     "expo-linking": "~6.2.2",
     "expo-router": "~3.4.8",
+    "expo-secure-store": "~12.8.1",
     "expo-status-bar": "~1.11.1",
     "json-server": "^1.0.0-alpha.23",
     "nativewind": "^2.0.11",
