--- a/app.json
+++ b/app.json
@@ -1,26 +1,27 @@
 {
-    "expo": {
-        "name": "mobile-marketbmxbr",
-        "slug": "mobile-marketbmxbr",
-        "scheme": "mobile-marketbmxbr",
-        "version": "1.0.0",
-        "assetBundlePatterns": [
-            "**/*"
-        ],
-        "extra": {
-            "eas": {
-                "projectId": "d089149b-ca3e-407d-b4f1-7551cca70b2b"
-            }
-        },
-        "plugins": [
-            "expo-router",
-            [
-                "expo-image-picker",
-                {
-                  "photosPermission": "The app accesses your photos to let you share them with your friends."
-                }
-              ]
-        ]
+  "expo": {
+    "name": "mobile-marketbmxbr",
+    "slug": "mobile-marketbmxbr",
+    "scheme": "mobile-marketbmxbr",
+    "version": "1.0.0",
+    "assetBundlePatterns": [
+      "**/*"
+    ],
+    "extra": {
+      "eas": {
+        "projectId": "d089149b-ca3e-407d-b4f1-7551cca70b2b"
+      }
     },
-    "name": "mobile-marketbmxbr"
+    "plugins": [
+      "expo-router",
+      [
+        "expo-image-picker",
+        {
+          "photosPermission": "The app accesses your photos to let you share them with your friends."
+        }
+      ],
+      "expo-secure-store"
+    ]
+  },
+  "name": "mobile-marketbmxbr"
 }
