Finalmente implementando o upload de imagem na Nuvem da Azure e adicionando a data do post pelo lado do servidor

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@azure/storage-blob": "^12.17.0",
     "@react-native-picker/picker": "^2.6.1",
     "@react-navigation/native": "^6.1.12",
     "@react-navigation/native-stack": "^6.9.20",
@@ -27,9 +28,11 @@
     "nativewind": "^2.0.11",
     "react": "^18.2.0",
     "react-native": "0.73.4",
+    "react-native-fetch-blob": "^0.10.8",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "typescript": "^5.3.0"
+    "typescript": "^5.3.0",
+    "expo-file-system": "~16.0.9"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
