--- a/package.json
+++ b/package.json
@@ -17,22 +17,22 @@
     "@types/react": "~18.2.45",
     "@types/tailwindcss": "^3.1.0",
     "axios": "^1.6.7",
-    "expo": "^50.0.8",
-    "expo-constants": "~15.4.5",
+    "expo": "^51.0.0",
+    "expo-constants": "~15.4.6",
+    "expo-file-system": "~16.0.9",
     "expo-image-picker": "~14.7.1",
     "expo-linking": "~6.2.2",
-    "expo-router": "~3.4.8",
+    "expo-router": "~3.4.10",
     "expo-secure-store": "~12.8.1",
     "expo-status-bar": "~1.11.1",
     "json-server": "^1.0.0-alpha.23",
     "nativewind": "^2.0.11",
     "react": "^18.2.0",
-    "react-native": "0.73.4",
+    "react-native": "^0.73.6",
     "react-native-fetch-blob": "^0.10.8",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "typescript": "^5.3.0",
-    "expo-file-system": "~16.0.9"
+    "typescript": "^5.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
