Início da utilização do React Native Paper e estilização inicial das páginas

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "mobile-marketbmxbr",
+    "name": "Mercado Bmx Br",
     "slug": "mobile-marketbmxbr",
     "scheme": "mobile-marketbmxbr",
     "version": "1.0.0",
