--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react-native": "^0.73.0",
+    "react-native-dotenv": "^3.4.11",
     "tailwindcss": "3.3.2"
   },
   "private": true
