adição de variáveis de ambiente, e 5 anuncios por categoria na home page e início da estilização da data pelo MongoDb

--- a/package.json
+++ b/package.json
@@ -9,14 +9,13 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@azure/storage-blob": "^12.17.0",
     "@react-native-picker/picker": "^2.6.1",
     "@react-navigation/native": "^6.1.12",
     "@react-navigation/native-stack": "^6.9.20",
-    "@types/jsonwebtoken": "^9.0.6",
     "@types/react": "~18.2.45",
     "@types/tailwindcss": "^3.1.0",
     "axios": "^1.6.7",
+    "date-fns": "^3.6.0",
     "expo": "^51.0.0",
     "expo-constants": "~15.4.6",
     "expo-file-system": "~16.0.9",
@@ -25,7 +24,6 @@
     "expo-router": "~3.4.10",
     "expo-secure-store": "~12.8.1",
     "expo-status-bar": "~1.11.1",
-    "json-server": "^1.0.0-alpha.23",
     "nativewind": "^2.0.11",
     "react": "^18.2.0",
     "react-native": "^0.73.6",
@@ -38,7 +36,6 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react-native": "^0.73.0",
-    "react-native-dotenv": "^3.4.11",
     "tailwindcss": "3.3.2"
   },
   "private": true
