--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-picker/picker": "^2.6.1",
+    "@react-native-picker/picker": "2.6.1",
     "@react-navigation/native": "^6.1.12",
     "@react-navigation/native-stack": "^6.9.20",
     "@types/react": "~18.2.45",
     "@types/tailwindcss": "^3.1.0",
     "axios": "^1.6.7",
     "date-fns": "^3.6.0",
-    "expo": "^51.0.0",
+    "expo": "~50.0.19",
     "expo-constants": "~15.4.6",
     "expo-file-system": "~16.0.9",
     "expo-image-picker": "~14.7.1",
@@ -26,8 +26,7 @@
     "expo-status-bar": "~1.11.1",
     "nativewind": "^2.0.11",
     "react": "^18.2.0",
-    "react-native": "^0.73.6",
-    "react-native-fetch-blob": "^0.10.8",
+    "react-native": "0.73.6",
     "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
