--- a/app.json
+++ b/app.json
@@ -20,6 +20,13 @@
           "photosPermission": "The app accesses your photos to let you share them with your friends."
         }
       ],
+      [
+        "expo-build-properties",{
+          "android": {
+            "usesCleartextTraffic": true
+          }
+        }
+      ],
       "expo-secure-store"
     ]
   },
