--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.6.7",
     "date-fns": "^3.6.0",
     "expo": "~50.0.19",
+    "expo-build-properties": "~0.11.1",
     "expo-constants": "~15.4.6",
     "expo-file-system": "~16.0.9",
     "expo-image-picker": "~14.7.1",
@@ -30,8 +31,7 @@
     "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "typescript": "^5.3.0",
-    "expo-build-properties": "~0.11.1"
+    "typescript": "^5.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
