Adicionando anúncios no App

--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,4 +1,4 @@
-rootProject.name = 'mobilemarketbmxbr'
+rootProject.name = 'Mercado Bmx Br'
 
 dependencyResolutionManagement {
   versionCatalogs {
